[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/dardanbujupaj.node_warnings/WarningList.gd" type="Script" id=1]

[node name="WarningList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_right = 506.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toolbar" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
margin_right = 506.0
margin_bottom = 24.0

[node name="WarningCount" type="Label" parent="HSplitContainer/VBoxContainer/Toolbar"]
margin_top = 5.0
margin_right = 71.0
margin_bottom = 19.0
text = "0 Warnings"

[node name="Filter" type="LineEdit" parent="HSplitContainer/VBoxContainer/Toolbar"]
margin_left = 75.0
margin_right = 430.0
margin_bottom = 24.0
size_flags_horizontal = 3
clear_button_enabled = true
placeholder_text = "Filter warnings"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditRules" type="Button" parent="HSplitContainer/VBoxContainer/Toolbar"]
margin_left = 434.0
margin_right = 506.0
margin_bottom = 24.0
text = "Edit rules"

[node name="ItemList" type="ItemList" parent="HSplitContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 506.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false ]
allow_reselect = true
allow_rmb_select = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="HSplitContainer"]
margin_left = 518.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Toolbar" type="HBoxContainer" parent="HSplitContainer/VBoxContainer2"]
margin_right = 506.0
margin_bottom = 24.0

[node name="WarningRules" type="Label" parent="HSplitContainer/VBoxContainer2/Toolbar"]
margin_top = 5.0
margin_right = 88.0
margin_bottom = 19.0
text = "Warning rules"

[node name="Filter" type="LineEdit" parent="HSplitContainer/VBoxContainer2/Toolbar"]
margin_left = 92.0
margin_right = 430.0
margin_bottom = 24.0
size_flags_horizontal = 3
clear_button_enabled = true
placeholder_text = "Filter warnings"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditRules" type="Button" parent="HSplitContainer/VBoxContainer2/Toolbar"]
margin_left = 434.0
margin_right = 506.0
margin_bottom = 24.0
text = "Edit rules"

[node name="Tree" type="Tree" parent="HSplitContainer/VBoxContainer2"]
margin_top = 28.0
margin_right = 506.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClassPopupMenu" type="PopupMenu" parent="."]
margin_left = 514.0
margin_top = 28.0
margin_right = 534.0
margin_bottom = 48.0
items = [ "Item 0", null, 0, false, false, 0, 0, null, "", false ]
allow_search = true
[connection signal="text_changed" from="HSplitContainer/VBoxContainer/Toolbar/Filter" to="." method="_on_Filter_text_changed"]
[connection signal="pressed" from="HSplitContainer/VBoxContainer/Toolbar/EditRules" to="." method="_on_EditRules_pressed"]
[connection signal="item_selected" from="HSplitContainer/VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="text_changed" from="HSplitContainer/VBoxContainer2/Toolbar/Filter" to="." method="_on_Filter_text_changed"]
[connection signal="pressed" from="HSplitContainer/VBoxContainer2/Toolbar/EditRules" to="." method="_on_EditRules_pressed"]
[connection signal="custom_popup_edited" from="HSplitContainer/VBoxContainer2/Tree" to="." method="_on_Tree_custom_popup_edited"]
[connection signal="index_pressed" from="ClassPopupMenu" to="." method="_on_ClassPopupMenu_index_pressed"]
